fixed alignment of elements

--- a/Frontend/src/app/components/admin-profile/admin-profile.component.css
+++ b/Frontend/src/app/components/admin-profile/admin-profile.component.css
@@ -23,14 +23,11 @@
   
   .button {
     margin-top: 30px;
-    width: 90px;
+    width: 145px;
     height: 40px;
-    font-size: 18px;
+    font-size: 15px;
     margin-left: 15px;
     margin-right: 15px;
   }
 
-  .change-password-button {
-    margin-bottom: 20px;
-  }
   
