--- a/Frontend/src/app/components/registration/registration.component.css
+++ b/Frontend/src/app/components/registration/registration.component.css
@@ -1,6 +1,7 @@
 mat-form-field {
-    width: 60%;
+    width: 300px;
   }
+  
 
 .separateMe {
   display: flex;
@@ -11,4 +12,11 @@ mat-form-field {
 
 .icon-display {
   transform: scale(1.34);
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
 }
